# Hermes

./: .gitignore  README.md  docker-compose.yml  package.json  pubspec.yaml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  useFleet.ts
dashboard/src/components/: RateChart.tsx  SummaryBar.tsx  WorkerCard.tsx  WorkerDetail.tsx
docs/: windows-mining.md
lib/: config.dart  main.dart
lib/screens/: chat_screen.dart  controls_screen.dart  dashboard_screen.dart  history_screen.dart  login_screen.dart  picks_screen.dart  settings_screen.dart
lib/services/: api_service.dart  auth_service.dart
lib/widgets/: wing_field.dart
mock-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
mock-gateway/src/: index.ts
scripts/windows/: 1-start-node.bat  2-wallet.bat  3-run-miner.bat  4-dashboard.bat  5-run-monitor.bat
server/: .env.example  Dockerfile  api_server.py  odds_client.py  package-lock.json  package.json  prediction_engine.py  requirements.txt  risk_engine.py  server.py  sharp_client.py  start.sh  tsconfig.json  value_engine.py
server/src/: api.ts  config.ts  db.ts  index.ts  store.test.ts  store.ts  types.ts  ws.ts
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
worker/src/pearl_worker/: __init__.py  __main__.py  config.py  engine.py  gateway.py  pouw.py  power.py  reporter.py  stats.py
worker/tests/: test_pouw.py
